# yourclaw

./: .env.example  .gitignore  CLAUDE.md  MIGRATIONS.MD  README.md  render.yaml
apps/web/: package.json  pnpm-lock.yaml
backend/: fix_audience.py  pyproject.toml  send_announcement.py  send_test_email.py  send_to_all.py
backend-infra/: API.md  Dockerfile  pyproject.toml
backend-infra/src/backend_infra/: api.py
backend-infra/src/backend_infra/services/: claw_client.py  config_builder.py  hetzner_client.py  infra_client.py  k8s_client.py
backend-infra/test/: provision.py
backend/app/: auth.py  config.py  database.py  main.py  schemas.py  worker.py
backend/test/: infra.py  provision.py
docs/: competitors.md
frontend/: package.json  pnpm-lock.yaml
infra/: CLUSTER.md  cluster.yaml  test.sh
infra/docker/: Dockerfile  Dockerfile.sandbox-browser  build.sh  docker-compose.yml  sandbox-browser-entrypoint.sh
infra/k8s/: app-control-plane.yaml  browserless.yaml  control-plane.yaml  infra.yaml
infra/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  cloud_init.py  pyproject.toml
infra/talos/: 1-create-image.sh  10-check-members.sh  11-retrieve-kubectl-config.sh  13-install-hetzner-contorller.sh  13b-install-hetzner-csi.sh  14-install-cilium.sh  15-install-crds.sh  16-setup-dockerhub.sh  17-setup-secrets.sh  7-get-nodes.sh  (+17 more)
services/api/: pyproject.toml
services/api/app/: config.py  database.py  main.py  schemas.py  worker.py
services/api/app/routers/: assistants.py  oauth.py  users.py
services/api/app/services/: container_service.py  encryption.py
(+55 files in other folders)
