[project]
name = "yourclaw-api"
version = "0.1.0"
description = "YourClaw backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "stripe>=11.0.0",
    "twilio>=9.0.0",
    "python-multipart>=0.0.18",
    "paramiko>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
